--- a/web/nginx_prod.conf
+++ b/web/nginx_prod.conf
@@ -58,7 +58,7 @@ server {
     default_type  text/html;
     set $sweb $sname;
     if ($sname = '') {
-        set $sweb 'blog';
+        set $sweb 'jelly';
     }
     root   /data/www/$sweb/frontend/web;
     index  index.php index.htm index.html;
