--- a/web/nginx_prod.conf
+++ b/web/nginx_prod.conf
@@ -40,7 +40,6 @@ http {
     
 server {
     listen       443;
-    listen       81;
     server_name  ~^(?<sname>.+?).jellywen.cn$ jellywen.cn;
 
     ssl on;
@@ -50,6 +49,45 @@ server {
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
+
+    ssi on;
+    ssi_silent_errors on;
+    ssi_types text/shtml;
+    charset utf-8;
+    default_type  text/html;
+    set $sweb $sname;
+    if ($sname = '') {
+        set $sweb 'jelly';
+    }
+    root   /data/www/$sweb/frontend/web;
+    index  index.php index.htm index.html;
+
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+
+    location ~ /index.html {
+        access_log off; #关闭健康检查日志      
+    }
+    location ~ /test.html {
+        access_log off; #关闭健康检查日志      
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+
+    location ~ /\.(ht|svn|git|DS) {
+        deny all;
+    }
+}
+
+server {
+    listen       81;
+    server_name  ~^(?<sname>.+?).jellywen.cn$ jellywen.cn;
 
     ssi on;
     ssi_silent_errors on;
@@ -97,7 +135,7 @@ server {
     default_type  text/html;
     set $sweb $sname;
     if ($sname = '') {
-        set $sweb 'blog';
+        set $sweb 'jelly';
     }
     root   /data/www/$sweb/backend/web;
     index  index.php index.htm index.html;
