--- a/web/nginx_prod.conf
+++ b/web/nginx_prod.conf
@@ -72,7 +72,10 @@ server {
     location ~ /test.html {
         access_log off; #关闭健康检查日志      
     }
-
+    # deny accessing php files for the /assets directory
+    location ~ ^/assets/.*\.php$ {
+        deny all;
+    }
     location ~ \.php$ {
         fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
@@ -111,7 +114,10 @@ server {
     location ~ /test.html {
         access_log off; #关闭健康检查日志      
     }
-
+    # deny accessing php files for the /assets directory
+    location ~ ^/assets/.*\.php$ {
+        deny all;
+    }
     location ~ \.php$ {
         fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
@@ -157,7 +163,10 @@ server {
         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
-
+    # deny accessing php files for the /assets directory
+    location ~ ^/assets/.*\.php$ {
+        deny all;
+    }
     location ~ /\.(ht|svn|git|DS) {
         deny all;
     }
